test(api): add missions/:slug/projects
